--- a/templates/courseware/course_about.html
+++ b/templates/courseware/course_about.html
@@ -153,7 +153,22 @@
           <div class="short-description">
             <p>${get_course_about_section(course, 'short_description')}</p>
           </div>
-          </div>
+        </div>
+        <div class="cleaner"></div>
+        <div class="social-sharing">
+          % if microsite.get_value('course_about_show_social_links', True):
+            <%
+              course_about_url = "https://edx.courses.ionis-group.com{path}".format(path=reverse('about_course', args=[course.id]))
+              tweet_action = u"http://twitter.com/intent/tweet?text=Découvrez+le+cours+« {course_name} »+sur+@IONISx !+{course_about_url}".format(course_name=get_course_about_section(course, 'title'), course_about_url=course_about_url)
+            %>
+            <a href="${tweet_action}" target="_blank">
+              <span class="icon-twitter-sign"></span>
+            </a>
+            <a href="https://www.facebook.com/IONISx" target="_blank" class="facebook">
+              <span class="icon-facebook-sign"></span>
+            </a>
+          % endif
+        </div>
           <div class="main-cta">
             %if user.is_authenticated() and registered:
               %if show_courseware_link:
@@ -200,73 +215,70 @@
 
   <section class="container">
     <section class="details">
-      <nav>
-        <a href="#" class="active">${_("Overview")}</a>
-      ##  <a href="#">${_("FAQ")}</a>
-      ##  <a href="#">${_("Requirements")}</a>
-      ##  <a href="#">${_("Text-book")}</a>
-      ##  <a href="#">${_("Syllabus")}</a>
-      ##  <a href="#">${_("Reviews")}</a>
-      </nav>
-
+      <div class="course-summary">
+      </div>
       <div class="inner-wrapper">
+          <table class="course-summary">
+            <thead>
+              <tr>
+                % if not course.start_date_is_still_default:
+                  <th class="course-start">
+                    <span class="icon-calendar"></span>
+                    ${_("Classes Start")}</th>
+                % endif
+                  </th>
+                % if get_course_about_section(course, "end_date") or course.end:
+                  <th class="course-end">
+                    <span class="icon-calendar"></span>
+                    ${_("Classes End")}</p>
+                  </th>
+                % endif
+                % if get_course_about_section(course, "effort"):
+                  <th class="course-effort">
+                    <span class="icon-time"></span>
+                    ${_("Estimated Effort")}
+                  </th>
+                % endif
+                % if get_course_about_section(course, "prerequisites"):
+                  <th class="course-prereq">
+                    <span class="icon-cogs"></span>
+                    ${_("Prerequisites")}
+                  </th>
+                % endif
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                % if not course.start_date_is_still_default:
+                  <td>
+                    ${course.start_date_text}
+                  </td>
+                % endif
+                % if get_course_about_section(course, "end_date") or course.end:
+                  <td>
+                    % if get_course_about_section(course, "end_date"):
+                      ${get_course_about_section(course, "end_date")}
+                    % else:
+                      ${course.end_date_text}
+                    % endif
+                  </td>
+                % endif
+                % if get_course_about_section(course, "effort"):
+                  <td>
+                    ${get_course_about_section(course, "effort")}
+                  </td>
+                % endif
+                % if get_course_about_section(course, "prerequisites"):
+                  <td>
+                    ${get_course_about_section(course, "prerequisites")}
+                  </td>
+                % endif
+              </tr>
+            </tbody>
+          </table>
         ${get_course_about_section(course, "overview")}
       </div>
     </section>
-
-    <section class="course-sidebar">
-      <section class="course-summary">
-        <header>
-          % if microsite.get_value('course_about_show_social_links', True):
-          <div class="social-sharing">
-            <div class="sharing-message">Partager sur Twitter</div>
-            ## TODO: this should probably be an overrideable block,
-            ##       or something allowing themes to do whatever they
-            ##       want here (and on this whole page, really).
-              <%
-                course_about_url = "https://edx.courses.ionis-group.com{path}".format(
-                   path=reverse('about_course', args=[course.id])
-                )
-                tweet_action = u"http://twitter.com/intent/tweet?text=Découvrez+le+cours+« {course_name} »+sur+@IONISx !+{course_about_url}".format(course_name=get_course_about_section(course, 'title'), course_about_url=course_about_url)
-              %>
-              <a href="${tweet_action}" target="_blank" class="share">
-                <img src="${static.url('images/social/twitter-sharing.png')}" alt="Tweet that you've registered for this course">
-              </a>
-          </div>
-          % endif
-        </header>
-
-        <ol class="important-dates">
-          % if not course.start_date_is_still_default:
-          <li><div class="icon start"></div><p>${_("Classes Start")}</p><span class="start-date">${course.start_date_text}</span></li>
-          % endif
-            ## We plan to ditch end_date (which is not stored in course metadata),
-            ## but for backwards compatibility, show about/end_date blob if it exists.
-            % if get_course_about_section(course, "end_date") or course.end:
-            <li>
-                <div class="icon end"></div>
-                <p>${_("Classes End")}</p><span class="final-date">
-                % if get_course_about_section(course, "end_date"):
-                    ${get_course_about_section(course, "end_date")}
-                % else:
-                    ${course.end_date_text}
-                % endif
-                </span>
-            </li>
-            % endif
-
-          % if get_course_about_section(course, "effort"):
-            <li><div class="icon effort"></div><p>${_("Estimated Effort")}</p><span class="start-date">${get_course_about_section(course, "effort")}</span></li>
-          % endif
-
-          ##<li><div class="icon length"></div><p>${_('Course Length')}</p><span class="course-length">${_('{number} weeks').format(number=15)}</span></li>
-
-          % if get_course_about_section(course, "prerequisites"):
-            <li class="prerequisites"><div class="icon prereq"></div><p>${_("Prerequisites")}</p><span class="start-date">${get_course_about_section(course, "prerequisites")}</span></li>
-          % endif
-        </ol>
-      </section>
-
 
       ## For now, ocw links are the only thing that goes in additional resources
       % if get_course_about_section(course, "ocw_links"):
