--- a/static/css/main.css
+++ b/static/css/main.css
@@ -196,7 +196,6 @@ ul {
     border: 0 none;
 }
 
-
 .view-login .wrapper-footer > footer,
 .view-register .wrapper-footer > footer,
 .view-passwordreset .wrapper-footer > footer,
@@ -211,6 +210,7 @@ ul {
     margin-right: auto;
     padding-left: 15px;
     padding-right: 15px;
+    min-width: 0;
 }
 
 .wrapper-footer > footer > p {
@@ -439,7 +439,7 @@ header.global ol.user > li.primary > a > span.avatar {
 }
 
 @media (max-width : 480px) {
-    header.global.slim ol.left.nav-global {
+    header.global ol.left.nav-global {
         display: none;
     }
 }
@@ -735,6 +735,9 @@ section.course-info header.course-profile .intro-inner-wrapper .intro .main-cta 
     transition: all .1s ease-in;
     -webkit-border-radius: 4px;
     border-radius: 4px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 section.course-info header.course-profile .intro-inner-wrapper .intro .main-cta strong:hover:not(:disabled),
@@ -885,6 +888,20 @@ section.course-info section.details .inner-wrapper section.faq article.response:
     margin-bottom: 10px;
 }
 
+@media (max-width: 992px) {
+     section.course-info header.course-profile .intro-inner-wrapper .intro .main-cta span.register.disabled {
+        width: 100%;
+        padding: 10px;
+     }
+
+    section.course-info header.course-profile .intro-inner-wrapper .intro .main-cta strong,
+    section.course-info header.course-profile .intro-inner-wrapper .intro .main-cta a.register,
+    section.course-info header.course-profile .intro-inner-wrapper .intro .main-cta a.add-to-cart {
+        width: 100%;
+        margin-top: 10px;
+    }
+}
+
 @media (max-width: 480px) {
     section.course-info header.course-profile .intro-inner-wrapper {
         padding: 0;
@@ -902,10 +919,8 @@ section.course-info section.details .inner-wrapper section.faq article.response:
     section.course-info header.course-profile .intro-inner-wrapper .intro .main-cta strong,
     section.course-info header.course-profile .intro-inner-wrapper .intro .main-cta a.register,
     section.course-info header.course-profile .intro-inner-wrapper .intro .main-cta a.add-to-cart {
-        text-overflow: ellipsis;
-        overflow: hidden;
-        white-space: nowrap;
         padding: 10px;
+        width: 100%;
     }
 }
 
@@ -1457,12 +1472,3 @@ section.register #register-form #customCheckboxHonor {
     font-size: 17px;
     top: 32px;
 }
-
-/* ==========================================================================
-   Footer
-   ========================================================================== */
-
-.wrapper-footer footer {
-    min-width: 0;
-}
-
