--- a/templates/theme-head-extra.html
+++ b/templates/theme-head-extra.html
@@ -1,4 +1,3 @@
 ## mako
 <%namespace name='static' file='/static_content.html'/>
-<link rel="stylesheet" href="${static.url('themes/ioc-edx-theme/css/main.css')}" />
-<link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="${static.url('themes/ionisx/css/main.css')}" />
