--- a/static/less/reset.less
+++ b/static/less/reset.less
@@ -17,6 +17,7 @@ body,
     .container,
     section.home > section.container,
     section.introduction,
+    section.course-info header.course-profile .intro-inner-wrapper,
     .wrapper-footer footer {
         .square(auto);
         .container();
