Start adding style for course about page

--- a/static/css/copy.css
+++ b/static/css/copy.css
@@ -196,7 +196,6 @@ ul {
     border: 0 none;
 }
 
-
 .view-login .wrapper-footer > footer,
 .view-register .wrapper-footer > footer,
 .view-passwordreset .wrapper-footer > footer,
@@ -211,6 +210,7 @@ ul {
     margin-right: auto;
     padding-left: 15px;
     padding-right: 15px;
+    min-width: 0;
 }
 
 .wrapper-footer > footer > p {
@@ -439,7 +439,7 @@ header.global ol.user > li.primary > a > span.avatar {
 }
 
 @media (max-width : 480px) {
-    header.global.slim ol.left.nav-global {
+    header.global ol.left.nav-global {
         display: none;
     }
 }
@@ -735,6 +735,9 @@ section.course-info header.course-profile .intro-inner-wrapper .intro .main-cta 
     transition: all .1s ease-in;
     -webkit-border-radius: 4px;
     border-radius: 4px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 section.course-info header.course-profile .intro-inner-wrapper .intro .main-cta strong:hover:not(:disabled),
@@ -750,10 +753,10 @@ section.course-info header.course-profile .intro-inner-wrapper .intro .main-cta 
 section.course-info header.course-profile .intro-inner-wrapper .intro .main-cta a.register:active:not(:disabled),
 section.course-info header.course-profile .intro-inner-wrapper .intro .main-cta a.add-to-cart:active:not(:disabled) {
     box-shadow: none;
-    background-color: #2daae1;
 }
 
-section.course-info header.course-profile .intro-inner-wrapper .intro .main-cta span.register.disabled {
+section.course-info header.course-profile .intro-inner-wrapper .intro .main-cta span.register.disabled,
+section.course-info header.course-profile .intro-inner-wrapper .intro .main-cta span.add-to-cart {
     cursor: default;
     padding: 11px 0 10px 0;
     -webkit-border-radius: 4px;
@@ -765,7 +768,8 @@ section.course-info header.course-profile .intro-inner-wrapper .intro .main-cta 
 
 section.course-info header.course-profile .intro-inner-wrapper .intro .main-cta a.register,
 section.course-info header.course-profile .intro-inner-wrapper .intro .main-cta a.add-to-cart,
-section.course-info header.course-profile .intro-inner-wrapper .intro .main-cta span.register.private {
+section.course-info header.course-profile .intro-inner-wrapper .intro .main-cta span.register.private,
+section.course-info header.course-profile .intro-inner-wrapper .intro .main-cta span.add-to-cart {
     width: 100%;
     cursor: default;
 }
@@ -885,6 +889,20 @@ section.course-info section.details .inner-wrapper section.faq article.response:
     margin-bottom: 10px;
 }
 
+@media (max-width: 992px) {
+     section.course-info header.course-profile .intro-inner-wrapper .intro .main-cta span.register.disabled {
+        width: 100%;
+        padding: 10px;
+     }
+
+    section.course-info header.course-profile .intro-inner-wrapper .intro .main-cta strong,
+    section.course-info header.course-profile .intro-inner-wrapper .intro .main-cta a.register,
+    section.course-info header.course-profile .intro-inner-wrapper .intro .main-cta a.add-to-cart {
+        width: 100%;
+        margin-top: 10px;
+    }
+}
+
 @media (max-width: 480px) {
     section.course-info header.course-profile .intro-inner-wrapper {
         padding: 0;
@@ -902,10 +920,8 @@ section.course-info section.details .inner-wrapper section.faq article.response:
     section.course-info header.course-profile .intro-inner-wrapper .intro .main-cta strong,
     section.course-info header.course-profile .intro-inner-wrapper .intro .main-cta a.register,
     section.course-info header.course-profile .intro-inner-wrapper .intro .main-cta a.add-to-cart {
-        text-overflow: ellipsis;
-        overflow: hidden;
-        white-space: nowrap;
         padding: 10px;
+        width: 100%;
     }
 }
 
@@ -1399,7 +1415,6 @@ section.register #register-form .group-form-personalinformation2 .list-input > l
     border: 2px solid #3ea5ce;
 }
 
-
 section.register #register-form button[type=submit] {
     width: 20%;
     background-color: #2ecc71;
@@ -1459,10 +1474,105 @@ section.register #register-form #customCheckboxHonor {
 }
 
 /* ==========================================================================
-   Footer
+   Receipt page
    ========================================================================== */
 
-.wrapper-footer footer {
-    min-width: 0;
+body.purchase-receipt section.cart-list .content-main h1 {
+    color: #2ecc71;
 }
 
+body.purchase-receipt section.cart-list table.order-receipt th.total {
+    padding-left: 58px;
+}
+
+body.purchase-receipt section.cart-list table.order-receipt td.total {
+    padding-left: 60px;
+}
+
+body.purchase-receipt section.cart-list .content-main h2.billed_to {
+    padding-top: 50px;
+}
+
+/* ==========================================================================
+   Shopping cart
+   ========================================================================== */
+
+header.global ol.user > li.primary:last-child > a.shopping-cart {
+    border-color: #3ea5ce;
+    padding: 10px 20px;
+}
+
+header.global ol.user > li.primary:last-child > a.shopping-cart:hover {
+    border-color: #3ea5ce;
+}
+
+.cart-list {
+    padding: 30px;
+}
+
+.cart-list > h2 {
+    font-size: 19px;
+    color: #3ea5ce;
+}
+
+.cart-list .cart-table {
+    margin-top: 25px;
+}
+
+.cart-list .cart-table .cart-headings th {
+    border: 0 none;
+    padding: 0;
+}
+
+.cart-list .cart-table .cart-items td {
+    padding: 0;
+    padding-top: 10px;
+    position: relative;
+}
+
+.cart-list .cart-table .remove_line_item {
+    font-family: FontAwesome;
+    position: absolute;
+    top: 8px;
+    right: 10px;
+    color: #c0392b;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: none;
+    margin: 0;
+    float: none;
+}
+
+.cart-list .cart-table .remove_line_item:before {
+    content: "\f00d";
+}
+
+.cart-list form input[type="submit"] {
+    border: 1px solid transparent;
+    background: none;
+    box-shadow: none;
+    text-shadow: none;
+    background-color: #2ecc71;
+    color: #fff;
+    padding: 10px 20px;
+    transition: all .1s ease-in;
+    border-radius: 4px;
+    -webkit-font-smoothing: auto;
+    margin-top: 50px;
+}
+
+.cart-list form input[type="submit"]:hover {
+    background: none;
+    color: #2ecc71;
+    background-color: #fff;
+    border: 1px solid #2ecc71;
+}
+
+.cart-list form input[type="submit"]:active {
+    box-shadow: none;
+}
+
+.cart-list form input[type="submit"]:focus {
+    outline: 0;
+}
