--- a/static/less/reset.less
+++ b/static/less/reset.less
@@ -18,6 +18,7 @@ body,
     section.home > section.container,
     section.introduction,
     section.course-info header.course-profile .intro-inner-wrapper,
+    nav.course-material .inner-wrapper,
     .wrapper-footer footer {
         .square(auto);
         .container();
