Update new forum button style

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -962,6 +962,8 @@ div.info-wrapper section.handouts {
    Course forum
    ========================================================================== */
 
+.discussion-module .new-post-btn,
+.discussion-user-threads .new-post-btn,
 body.discussion .course-tabs .right .new-post-btn {
     height: 34px;
     transition: all .1s ease-in;
@@ -975,6 +977,10 @@ body.discussion .course-tabs .right .new-post-btn {
     font-weight: 600;
 }
 
+.discussion-module .new-post-btn:hover,
+.discussion-module .new-post-btn:focus,
+.discussion-user-threads .new-post-btn:hover,
+.discussion-user-threads .new-post-btn:focus,
 body.discussion .course-tabs .right .new-post-btn:hover,
 body.discussion .course-tabs .right .new-post-btn:focus {
     background: none;
@@ -983,6 +989,8 @@ body.discussion .course-tabs .right .new-post-btn:focus {
     color: white;
 }
 
+.discussion-module .new-post-icon,
+.discussion-user-threads .new-post-icon,
 body.discussion .course-tabs .right .new-post-icon {
     color: inherit;
 }
