--- a/static/less/pages/homepage.less
+++ b/static/less/pages/homepage.less
@@ -4,6 +4,10 @@
             display: none;
         }
 
+        .container {
+            .edx-container();
+        }
+
         .courses .course {
             box-shadow: none;
             background: none;
