--- a/static/less/global/header.less
+++ b/static/less/global/header.less
@@ -18,12 +18,12 @@ header.global, header.global.slim,
     }
 
     > nav {
+        .edx-container();
+
         padding-top: 15px;
         padding-bottom: 15px;
 
         h1.logo {
-            .navbar-header();
-
             margin: 0 30px 0 0;
             padding: 0;
 
