--- a/static/less/main.less
+++ b/static/less/main.less
@@ -4,6 +4,6 @@
 @import 'variables.less';
 @import 'reset.less';
 
+@import 'mixins/main.less';
 @import 'global/main.less';
-
 @import 'pages/main.less';
