Add mixin to create rounded tables

--- a/static/less/mixins/main.less
+++ b/static/less/mixins/main.less
@@ -5,3 +5,10 @@
     min-width: 0;
     max-width: none;
 }
+
+.table-rounded(@radius: 4px) {
+    border-collapse: separate;
+    border-spacing: 0;
+    border-radius: @radius;
+    overflow: hidden;
+}
