--- a/static/less/variables.less
+++ b/static/less/variables.less
@@ -22,3 +22,14 @@
 
 @font-family-sans-serif: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 @font-family-serif: Georgia, 'Times New Roman', Times, serif;
+
+@font-size-base: 16px;
+@line-height-base: 26/16;
+
+@headings-line-height: 1.3em;
+
+@headings-font-weight: 600;
+
+@font-size-h1: 32px;
+@font-size-h2: 20px;
+@font-size-h3: 18px;
